<resources>
    <string name="app_name">Poster Maker</string>
    <string name="DesignOptionsInstruction">Long Press on your Design for Options.</string>
    <string name="NoDesigns">No Design\'s saved. Check out \'Free Designs\' Or \'Create Poster\' and save as Design.</string>
    <string name="SavedAs">Save As</string>
    <string name="SavedPictures">Saved Pictures</string>
    <string name="_color">Pick color</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="add_sticker">Stickers</string>
    <string name="add_text">Text</string>
    <string name="alert">unsaved work</string>
    <string name="app_not_found">Application not found!!!</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bck_image">Back Photo</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="camera">Camera</string>
    <string name="cancel">cancel</string>
    <string name="cat1">Offer Banners</string>
    <string name="cat10">Festival</string>
    <string name="cat11">Love</string>
    <string name="cat12">College</string>
    <string name="cat13">Circle Decoration</string>
    <string name="cat14">Coffee</string>
    <string name="cat15">Cars</string>
    <string name="cat16">Nature</string>
    <string name="cat17">Words</string>
    <string name="cat18">Halloween</string>
    <string name="cat19">Animals</string>
    <string name="cat2">Sale Banners</string>
    <string name="cat20">Cartoons</string>
    <string name="cat21">Shapes</string>
    <string name="cat22">White Stickers</string>
    <string name="cat23">Image Stickers</string>
    <string name="cat3">Banners</string>
    <string name="cat4">Sports</string>
    <string name="cat5">Ribbon</string>
    <string name="cat6">Birthday</string>
    <string name="cat7">Decoration</string>
    <string name="cat8">Party</string>
    <string name="cat9">Music</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_internet">Oops! something went wrong. Please check your internet connection and try again.</string>
    <string name="choose_stickr">Choose Sticker</string>
    <string name="coins">Coins</string>
    <string name="colorPicker">Color Picker</string>
    <string name="colorcc">Selected Color</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create1">Create</string>
    <string name="create2">Poster</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_dir_err">Can\'t create directory to save image.</string>
    <string name="crop">Crop</string>
    <string name="custom">Custom</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="del_error_toast">Error occured during deletion.</string>
    <string name="delete">delete</string>
    <string name="deleted">Deleted</string>
    <string name="dialog_tilte2">Loyalty Reward</string>
    <string name="dont_show">Don\'t show again</string>
    <string name="downloaded">Sticker downloaded successfully</string>
    <string name="downloadin_file">Downloading file...</string>
    <string name="downloading">Downloading Stickers Please wait..</string>
    <string name="earncoin">Free Coins</string>
    <string name="email_error">No email client installed.</string>
    <string name="email_msg">Write your problems or suggestions here..</string>
    <string name="error">Error</string>
    <string name="error_pic">No backgrounds selected.</string>
    <string name="exit1">Exit</string>
    <string name="exitAddquotePage">do you want to exit without saving.</string>
    <string name="exit_title">Rate Poster Maker</string>
    <string name="exit_warning">Do you like Poster Maker. Please Rate &amp; Review and help us make the app even better.</string>
    <string name="file_not_downloaded">Unable to download file. Please check your internet connection and try again.</string>
    <string name="gallery">Gallery</string>
    <string name="getcoins">Earn Coins</string>
    <string name="gopremium">Go Premium</string>
    <string name="hint_text">Your Text Here</string>
    <string name="inapp">$ 1.99</string>
    <string name="init_data">initializing data..(One Time)</string>
    <string name="installandrate">Install and Rate application</string>
    <string name="interstitial_full_screen">ca-app-pub-6176635063874465/5462928870</string>
    <string name="later">Later</string>
    <string name="leavepage_alert">Are you sure you want to leave this page?</string>
    <string name="loading">Initializing</string>
    <string name="memoryerror">Oops! something went wrong. Seems like you don\'t have enough space to save this picture. Please check your device internal memory and delete some data and then try again.</string>
    <string name="msg_rating">Dear User, Your 5 stars rating and review will encourage us to better improve the product.</string>
    <string name="no">No</string>
    <string name="no1">No thanks!</string>
    <string name="no_internet">No Internet</string>
    <string name="no_more_data">No more data on Server!</string>
    <string name="no_saved_pics">No saved pictures</string>
    <string name="noapps">No apps available right now</string>
    <string name="ok">OK</string>
    <string name="ok1">Ok</string>
    <string name="open">open</string>
    <string name="or">OR</string>
    <string name="otherapps">Try our other Apps</string>
    <string name="permission">Permission!</string>
    <string name="permission_des">Grant these permissions to use Poster Maker</string>
    <string name="permission_des1">Note: You can also give permissions in Settings --&gt; apps --&gt; Poster Maker --&gt;Permissions</string>
    <string name="picUpImg">Oops! Something went wrong Please try again with different Image.</string>
    <string name="pick_color">Picked color</string>
    <string name="please_wait">Please wait</string>
    <string name="plzwait">Please wait..</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="rate_msg">Liked this app? Please give us 5 star!</string>
    <string name="rate_now">Rate now</string>
    <string name="rate_us">Rate us</string>
    <string name="remove_watermark">Remove Watermark</string>
    <string name="remove_watermark_inapp_msg">Purchase premium for just</string>
    <string name="review_now">Write Review</string>
    <string name="settings">Settings</string>
    <string name="storage">Storage</string>
    <string name="template_error">Some images are missing for this design. Do you want to continue?</string>
    <string name="txt5">To keep up with further development cost, This new update has some features locked and can be purchased for</string>
    <string name="txt6">However, because you had supported us in our development stage, we thank you and as an token of appreciation, for you, all locked features remain FREE.</string>
    <string name="txt7">Kindly leave us some positive comments.</string>
    <string name="txt_conti">continue</string>
    <string name="txt_design">Design</string>
    <string name="txt_image">Image</string>
    <string name="txt_saveMsg">Design - Lets you rework</string>
    <string name="txt_saveMsg1">Image - Is final Picture for sharing and posting.</string>
    <string name="yes">Yes</string>
</resources>