<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="18sp"
        android:textColor="@color/white"
        android:id="@+id/permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/permission" />

    <TextView
        android:textSize="15sp"
        android:textColor="@color/white"
        android:id="@+id/permission_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:text="@string/permission_des" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:tint="@color/white"
            android:src="@drawable/camera_pricon" />

        <TextView
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:id="@+id/camera_prtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/camera" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:tint="@color/white"
            android:src="@drawable/storage_pricon" />

        <TextView
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:id="@+id/storage_prtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="10dp"
            android:text="@string/storage" />
    </LinearLayout>

    <TextView
        android:textSize="12sp"
        android:textColor="@color/white"
        android:id="@+id/permission_des1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:text="@string/permission_des1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp">

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:text="@string/ok"
            android:textColor="#ff009183"
            android:textSize="18sp" />

        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_toLeftOf="@+id/ok"
            android:background="@color/white"
            android:text="@string/settings"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:visibility="invisible" />
    </RelativeLayout>
</LinearLayout>
