<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/ss"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/txtapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/alert"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true" />
    </RelativeLayout>

    <TextView
        android:textSize="16sp"
        android:textColor="@color/white"
        android:id="@+id/txt_free"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/leavepage_alert" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/btn_yes"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/yes"
            android:layout_weight="1" />

        <Button
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/btn_no"
            android:background="@color/white"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/no"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
