<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/txtapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="7dp"
            android:text="@string/SavedAs"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll"
        android:layout_below="@+id/ss"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saveMsg"
                android:textColor="@android:color/white"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saveMsg1"
                android:textColor="@android:color/white"
                android:textSize="17dp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_template"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/txt_design"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/txt_image"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:typeface="serif" />
    </LinearLayout>
</RelativeLayout>
