<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorback"
    android:padding="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/open"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open" />

    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/delete"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/delete" />

    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/cancel"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancel" />
</LinearLayout>
