<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageView
            android:id="@+id/img"
            android:background="@mipmap/ic_launcher"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true" />

        <TextView
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/txtH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/exit_title"
            android:singleLine="true"
            android:layout_toRightOf="@+id/img"
            android:layout_centerVertical="true"
            android:textAllCaps="true" />
    </RelativeLayout>

    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:textSize="17sp"
        android:textColor="@color/white"
        android:id="@+id/txt_free"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/exit_warning" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:textSize="18sp"
            android:textColor="@color/black"
            android:id="@+id/btn_no"
            android:background="@color/white"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/exit1"
            android:layout_weight="1" />

        <Button
            android:textSize="18sp"
            android:textColor="@color/black"
            android:id="@+id/btn_yes"
            android:background="@color/white"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/rate_now"
            android:layout_weight="1"
            android:layout_alignParentRight="true" />
    </LinearLayout>
</LinearLayout>
