<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/layTitle"
        android:background="@color/colorTheme"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/txt_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/dialog_tilte2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAllCaps="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layTitle">

        <RelativeLayout
            android:id="@+id/layRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/kk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/txt5" />

                <TextView
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="right"
                    android:id="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt6" />

                <TextView
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="right"
                    android:id="@+id/txt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt7" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_below="@+id/kk">

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/ll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1">

                    <Button
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:id="@+id/btn_later"
                        android:background="@color/colorTheme"
                        android:padding="3dp"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/later" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1">

                    <Button
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:id="@+id/btn_review"
                        android:background="@color/colorTheme"
                        android:padding="3dp"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/review_now" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
